--- a/index.html
+++ b/index.html
@@ -4,10 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title lang="uk">Студія</title>
   </head>
   <body>
-    <h1>Привіт</h1>
-    <h2>Привіт</h2>
+    <header>
+      <nav>
+        <a href="./index.html">WEB STUDIO</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
+    <main>
+      <section>
+        <div><h1>Effective Solutions for Your Business</h1></div>
+        <div><button type="button">Order Service</button></div>
+      </section>
+      <section>
+        <h2 hidden>How we are working</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/image-1.jpg"
+              alt="computer screen"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/image-2.jpg"
+              alt="telephone with messenger"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/image-3.jpg"
+              alt="telephone and computer"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our-team/marc-guerero.jpg"
+              alt="smiling man"
+              width="264"
+              height="260"
+            />
+            <h3>Marc Guerero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team/tom-ford.jpg"
+              alt="smiling man 2"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team/camila-garcia.jpg"
+              alt="smiling women"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our-team/daniel-wilson.jpg"
+              alt="smiling man 3"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html">WEB STUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
