--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WEB STUDIO</a>
+        <a href="">WEB STUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
         <div><h1>Effective Solutions for Your Business</h1></div>
-        <div><button type="button">Order Service</button></div>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <h2 hidden>How we are working</h2>
@@ -90,12 +95,12 @@
         <ul>
           <li>
             <img
-              src="./images/our-team/marc-guerero.jpg"
+              src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
               width="264"
               height="260"
             />
-            <h3>Marc Guerero</h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
