--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
+      <h3><a href="">WEB STUDIO</a></h3>
       <nav>
-        <a href="">WEB STUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -25,7 +25,7 @@
     </header>
     <main>
       <section>
-        <div><h1>Effective Solutions for Your Business</h1></div>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
@@ -137,7 +137,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEB STUDIO</a>
+      <h3><a href="./index.html">WEB STUDIO</a></h3>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
