--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <header>
-      <h3><a href="">WEB STUDIO</a></h3>
+      <h3>
+        <a href="./index.html">
+          <div>Web</div>
+          <div>Studio</div>
+        </a>
+      </h3>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -137,7 +142,7 @@
       </section>
     </main>
     <footer>
-      <h3><a href="./index.html">WEB STUDIO</a></h3>
+      <h3><a href="./index.html">WebStudio</a></h3>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
