--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
   </head>
   <body>
     <header>
-      <h3>
-        <a href="./index.html">
-          <div>Web</div>
-          <div>Studio</div>
-        </a>
-      </h3>
       <nav>
+        <a href="./index.html"> WebStudio </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
