--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title lang="uk">Студія</title>
+    <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css>
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="header-el">
         <a href="./index.html"> WebStudio </a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+        <ul class="list">
+          <li><a href="./studio.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
@@ -30,7 +37,7 @@
       </section>
       <section>
         <h2 hidden>How we are working</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -63,7 +70,7 @@
       </section>
       <section>
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/image-1.jpg"
@@ -92,7 +99,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/our-team/marc-guerrero.jpg"
