--- a/index.html
+++ b/index.html
@@ -11,29 +11,43 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <nav class="header-el">
-        <a href="./index.html"> WebStudio </a>
-        <ul class="list">
-          <li><a href="./studio.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+  <body class="main-font">
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo" href="./index.html"
+          ><span class="logo-span">Web</span>Studio</a
+        >
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./studio.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a class="email link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="header-one">Effective Solutions for Your Business</h1>
+        <button class="modal-btn ord-ser-btn" type="button">Order Service</button>
       </section>
       <section>
         <h2 hidden>How we are working</h2>
@@ -144,7 +158,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+          ><span class="logo-span">Web</span>Studio</a
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
