--- a/portfolio.html
+++ b/portfolio.html
@@ -4,31 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    /> <link rel="stylesheet" href="./css/styles.css>
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav class="header-el">
-        <a href="./index.html"> WebStudio </a>
-        <ul class="list">
-          <li><a href="./studio.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="page-nav">
+        <a class="logo" href="./index.html"
+          ><span class="logo-span">Web</span>Studio</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./studio.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a class="email link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
       <nav class="portfolio-button">
-        <button type="button">All</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>
+        <button class="button" type="button">All</button>
+        <button class="button" type="button">Web Site</button>
+        <button class="button" type="button">App</button>
+        <button class="button" type="button">Design</button>
+        <button class="button" type="button">Marketing</button>
       </nav>
     </header>
     <main>
@@ -135,5 +154,12 @@
         </ul>
       </section>
     </main>
+    <footer>
+          ><span class="logo-span">Web</span>Studio</a
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
