--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <body class="main-font">
     <header class="page-header">
       <nav class="page-nav">
-        <a class="logo" href="./index.html"
-          ><span class="logo-span">Web</span>Studio</a
-        >
+        <a class="logo link" href="./index.html">WebStudio</a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./studio.html">Studio</a>
@@ -47,7 +45,9 @@
     <main>
       <section>
         <h1 class="header-one">Effective Solutions for Your Business</h1>
-        <button class="modal-btn ord-ser-btn" type="button">Order Service</button>
+        <button class="modal-btn ord-ser-btn" type="button">
+          Order Service
+        </button>
       </section>
       <section>
         <h2 hidden>How we are working</h2>
@@ -158,7 +158,7 @@
       </section>
     </main>
     <footer>
-          ><span class="logo-span">Web</span>Studio</a
+      <a class="logo link" href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
