--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,7 @@
   <body>
     <header>
       <nav class="page-nav">
-        <a class="logo" href="./index.html"
-          ><span class="logo-span">Web</span>Studio</a>
+        <a class="logo link" href="./index.html">WebStudio</a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./studio.html">Studio</a>
@@ -155,7 +154,7 @@
       </section>
     </main>
     <footer>
-          ><span class="logo-span">Web</span>Studio</a
+      <a class="logo link" href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
