--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,15 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="main-font">
     <header>
       <nav class="page-nav">
-        <a class="logo link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-design">Studio</span></a
+        >
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./studio.html">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -29,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="adress-item">
         <ul class="list">
           <li>
             <a class="email link" href="mailto:info@devstudio.com"
@@ -41,7 +43,7 @@
           </li>
         </ul>
       </address>
-      <nav class="portfolio-button">
+      <nav class="portfolio-button button-font">
         <button class="button" type="button">All</button>
         <button class="button" type="button">Web Site</button>
         <button class="button" type="button">App</button>
@@ -51,6 +53,7 @@
     </header>
     <main>
       <section>
+        <h1 hidden>WebStudio Portfolio</h1>
         <ul class="list">
           <li>
             <img
@@ -82,9 +85,6 @@
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
-        </ul>
-      </section>
-      <section>
         <ul class="list">
           <li>
             <img
@@ -116,10 +116,6 @@
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
-        </ul>
-      </section>
-      <section>
-        <ul class="list">
           <li>
             <img
               src="./images/portfolio-images/instagram-feed.jpg"
@@ -153,8 +149,10 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="logo link" href="./index.html">WebStudio</a>
+    <footer class="foot">
+      <a class="logo link" href="./index.html"
+        >Web<span class="logo-design">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
