--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   <body class="main-font">
     <header class="page-header">
       <nav class="page-nav">
-        <a class="logo link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-design">Studio</span></a
+        >
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./studio.html">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -29,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="adress-item">
         <ul class="list">
           <li>
             <a class="email link" href="mailto:info@devstudio.com"
@@ -43,39 +45,39 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1 class="header-one">Effective Solutions for Your Business</h1>
+      <section class="studio-sec-one">
+        <h1 class="header-front">Effective Solutions for Your Business</h1>
         <button class="modal-btn ord-ser-btn" type="button">
           Order Service
         </button>
       </section>
       <section>
-        <h2 hidden>How we are working</h2>
+        <h2 class="studio-sec-two" hidden>How we are working</h2>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="h-sec-two extra">Strategy</h3>
+            <p class="p-sec-two">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="h-sec-two">Punctuality</h3>
+            <p class="p-sec-two">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="h-sec-two">Diligence</h3>
+            <p class="p-sec-two">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="h-sec-two">Technologies</h3>
+            <p class="p-sec-two">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -83,9 +85,9 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="our-work">What are we doing</h2>
         <ul class="list">
-          <li>
+          <li class="comp">
             <img
               src="./images/image-1.jpg"
               alt="computer screen"
@@ -93,7 +95,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="smartphone">
             <img
               src="./images/image-2.jpg"
               alt="telephone with messenger"
@@ -101,7 +103,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="app">
             <img
               src="./images/image-3.jpg"
               alt="telephone and computer"
@@ -112,9 +114,9 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="h-sec-three">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="marc-guerero">
             <img
               src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
@@ -124,7 +126,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="tom-ford">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="smiling man 2"
@@ -134,7 +136,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="camila-garcia">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="smiling women"
@@ -144,7 +146,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="daniel-wilson">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="smiling man 3"
@@ -157,8 +159,10 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="logo link" href="./index.html">WebStudio</a>
+    <footer class="foot">
+      <a class="logo link" href="./index.html"
+        >Web<span class="logo-design">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
