--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         >
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
+            <a class="menu-link link studio-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            <a class="menu-link link studio-link" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="">Contacts</a>
@@ -55,7 +57,7 @@
         <h2 class="studio-sec-two" hidden>How we are working</h2>
         <ul class="list">
           <li>
-            <h3 class="h-sec-two extra">Strategy</h3>
+            <h3 class="h-sec-two">Strategy</h3>
             <p class="p-sec-two">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -123,8 +125,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="h-marc">Mark Guerrero</h3>
+            <p class="p-marc">Product Designer</p>
           </li>
           <li class="tom-ford">
             <img
