--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           Order Service
         </button>
       </section>
-      <section>
+      <section class="section-two">
         <h2 class="studio-sec-two" hidden>How we are working</h2>
         <ul class="list">
           <li>
@@ -118,45 +118,46 @@
       <section>
         <h2 class="h-sec-three">Our Team</h2>
         <ul class="list">
-          <li class="marc-guerero">
+          <li>
             <img
               src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
               width="264"
               height="260"
             />
-            <h3 class="h-marc">Mark Guerrero</h3>
-            <p class="p-marc">Product Designer</p>
+            <h3 class="h-sec-two">Mark Guerrero</h3>
+            <p class="p-sec-two">Product Designer</p>
           </li>
-          <li class="tom-ford">
+          class="p-sec-two"
+          <li>
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="smiling man 2"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="h-sec-two">Tom Ford</h3>
+            <p class="p-sec-two">Frontend Developer</p>
           </li>
-          <li class="camila-garcia">
+          <li>
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="smiling women"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="h-sec-two">Camila Garcia</h3>
+            <p class="p-sec-two">Marketing</p>
           </li>
-          <li class="daniel-wilson">
+          <li>
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="smiling man 3"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="h-sec-two">Daniel Wilson</h3>
+            <p class="p-sec-two">UI Designer</p>
           </li>
         </ul>
       </section>
