--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             >
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="">Contacts</a>
+            <a class="menu-link link studio-link" href="./index.html"
+              >Contacts</a
+            >
           </li>
         </ul>
       </nav>
@@ -116,48 +118,48 @@
         </ul>
       </section>
       <section>
-        <h2 class="h-sec-three">Our Team</h2>
+        <h2 class="h-our-team">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="marc-guerero">
             <img
               src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
               width="264"
               height="260"
             />
-            <h3 class="h-sec-two">Mark Guerrero</h3>
-            <p class="p-sec-two">Product Designer</p>
+            <h3 class="h-our-team">Mark Guerrero</h3>
+            <p class="p-our-team">Product Designer</p>
           </li>
           class="p-sec-two"
-          <li>
+          <li class="tom-ford">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="smiling man 2"
               width="264"
               height="260"
             />
-            <h3 class="h-sec-two">Tom Ford</h3>
-            <p class="p-sec-two">Frontend Developer</p>
+            <h3 class="h-our-team">Tom Ford</h3>
+            <p class="p-our-team">Frontend Developer</p>
           </li>
-          <li>
+          <li class="camila-garcia">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="smiling women"
               width="264"
               height="260"
             />
-            <h3 class="h-sec-two">Camila Garcia</h3>
-            <p class="p-sec-two">Marketing</p>
+            <h3 class="h-our-team">Camila Garcia</h3>
+            <p class="p-our-team">Marketing</p>
           </li>
-          <li>
+          <li class="daniel-wilson">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="smiling man 3"
               width="264"
               height="260"
             />
-            <h3 class="h-sec-two">Daniel Wilson</h3>
-            <p class="p-sec-two">UI Designer</p>
+            <h3 class="h-our-team">Daniel Wilson</h3>
+            <p class="p-our-team">UI Designer</p>
           </li>
         </ul>
       </section>
