--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="">Contacts</a>
+            <a class="menu-link link" href="./index.html">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -43,12 +43,12 @@
           </li>
         </ul>
       </address>
-      <nav class="portfolio-button button-font">
-        <button class="button" type="button">All</button>
-        <button class="button" type="button">Web Site</button>
-        <button class="button" type="button">App</button>
-        <button class="button" type="button">Design</button>
-        <button class="button" type="button">Marketing</button>
+      <nav class="portfolio-button">
+        <button class="button button-font" type="button">All</button>
+        <button class="button button-font" type="button">Web Site</button>
+        <button class="button button-font" type="button">App</button>
+        <button class="button button-font" type="button">Design</button>
+        <button class="button button-font" type="button">Marketing</button>
       </nav>
     </header>
     <main>
