--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -44,11 +44,18 @@
         </ul>
       </address>
       <nav class="portfolio-button">
-        <button class="button button-font" type="button">All</button>
-        <button class="button button-font" type="button">Web Site</button>
-        <button class="button button-font" type="button">App</button>
-        <button class="button button-font" type="button">Design</button>
-        <button class="button button-font" type="button">Marketing</button>
+        <ul class="list">
+          <li>        <button class="button button-font" type="button">All</button>
+</li>
+          <li>        <button class="button button-font" type="button">Web Site</button>
+</li>
+          <li>        <button class="button button-font" type="button">App</button>
+</li>
+          <li>        <button class="button button-font" type="button">Design</button>
+</li>
+          <li>        <button class="button button-font" type="button">Marketing</button>
+</li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -56,16 +63,19 @@
         <h1 hidden>WebStudio Portfolio</h1>
         <ul class="list">
           <li>
-            <img
+            <a class="link" href="">
+            <img 
               src="./images/portfolio-images/bank-app.jpg"
               alt="bank app"
               width="360"
               height="300"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h2 class="port-gallery">Banking App Interface Concept</h2>
+            <p class="port-description">App</p>
+                          </a>
           </li>
           <li>
+             <a class="link" href="">
             <img
               src="./images/portfolio-images/qr-code.jpg"
               alt="qr code"
@@ -74,8 +84,11 @@
             />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
+            </a>
           </li>
           <li>
+             <a class="link" href="">
+
             <img
               src="./images/portfolio-images/meditation-app.jpg"
               alt="meditation app"
@@ -84,9 +97,13 @@
             />
             <h3>Meditation App</h3>
             <p>App</p>
+             </a>
+
           </li>
         <ul class="list">
           <li>
+             <a class="link" href="">
+
             <img
               src="./images/portfolio-images/taxi-service.jpg"
               alt="car steering wheel"
@@ -95,8 +112,12 @@
             />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
+             </a>
+
           </li>
           <li>
+             <a class="link" href="">
+
             <img
               src="./images/portfolio-images/screen-illustrator.jpg"
               alt="modern smartphone"
@@ -105,8 +126,12 @@
             />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
+             </a>
+
           </li>
           <li>
+             <a class="link" href="">
+
             <img
               src="./images/portfolio-images/online-courses.jpg"
               alt="smiling girl"
@@ -115,8 +140,12 @@
             />
             <h3>Online Courses</h3>
             <p>Marketing</p>
+             </a>
+
           </li>
           <li>
+             <a class="link" href="">
+
             <img
               src="./images/portfolio-images/instagram-feed.jpg"
               alt="instagram feed"
@@ -125,8 +154,12 @@
             />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
+             </a>
+
           </li>
           <li>
+             <a class="link" href="">
+
             <img
               src="./images/portfolio-images/fresh-fruits.jpg"
               alt="fresh fruits"
@@ -135,8 +168,12 @@
             />
             <h3>Organic Food</h3>
             <p>Web Site</p>
+             </a>
+
           </li>
           <li>
+            <a class="link" href="">
+
             <img
               src="./images/portfolio-images/late-art.jpg"
               alt="late art"
@@ -145,13 +182,15 @@
             />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
+             </a>
+
           </li>
         </ul>
       </section>
     </main>
     <footer class="foot">
       <a class="logo link" href="./index.html"
-        >Web<span class="logo-design">Studio</span></a
+        >Web<span class="logo-design-footer">Studio</span></a
       >
       <p>
         Increase the flow of customers and sales for your business with digital
