--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="logo link" href="./index.html"
           >Web<span class="logo-design">Studio</span></a
         >
-        <ul class="menu list">
+        <ul class="menu-list list">
           <li class="menu-item">
             <a class="menu-link link studio-link" href="./index.html">Studio</a>
           </li>
@@ -29,9 +29,7 @@
             >
           </li>
           <li class="menu-item">
-            <a class="menu-link link studio-link" href="./index.html"
-              >Contacts</a
-            >
+            <a class="menu-link link studio-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -117,7 +115,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="sec-our-team">
         <h2 class="h-our-team">Our Team</h2>
         <ul class="list">
           <li class="marc-guerero">
@@ -166,7 +164,7 @@
     </main>
     <footer class="foot">
       <a class="logo link" href="./index.html"
-        >Web<span class="logo-design">Studio</span></a
+        >Web<span class="logo-design-footer">Studio</span></a
       >
       <p>
         Increase the flow of customers and sales for your business with digital
