--- a/portfolio.html
+++ b/portfolio.html
@@ -43,17 +43,17 @@
           </li>
         </ul>
       </address>
-      <nav class="portfolio-button">
+      <nav>
         <ul class="list">
-          <li>        <button class="button button-font" type="button">All</button>
+          <li>        <button class="port-button button-color" type="button">All</button>
 </li>
-          <li>        <button class="button button-font" type="button">Web Site</button>
+          <li>        <button class="port-button button-color" type="button">Web Site</button>
 </li>
-          <li>        <button class="button button-font" type="button">App</button>
+          <li>        <button class="port-button button-color" type="button">App</button>
 </li>
-          <li>        <button class="button button-font" type="button">Design</button>
+          <li>        <button class="port-button button-color" type="button">Design</button>
 </li>
-          <li>        <button class="button button-font" type="button">Marketing</button>
+          <li>        <button class="port-button button-color" type="button">Marketing</button>
 </li>
         </ul>
       </nav>
