--- a/portfolio.html
+++ b/portfolio.html
@@ -45,15 +45,15 @@
       </address>
       <nav>
         <ul class="list">
-          <li>        <button type="button" class="port-button button-color">All</button>
+          <li>        <button type="button" class="port-button button-color main-font">All</button>
 </li>
-          <li>        <button type="button" class="port-button button-color" >Web Site</button>
+          <li>        <button type="button" class="port-button button-color main-font" >Web Site</button>
 </li>
-          <li>        <button type="button" class="port-button button-color" >App</button>
+          <li>        <button type="button" class="port-button button-color main-font" >App</button>
 </li>
-          <li>        <button type="button" class="port-button button-color" >Design</button>
+          <li>        <button type="button" class="port-button button-color main-font" >Design</button>
 </li>
-          <li>        <button type="button" class="port-button button-color" >Marketing</button>
+          <li>        <button type="button" class="port-button button-color main-font" >Marketing</button>
 </li>
         </ul>
       </nav>
