--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               width="264"
               height="260"
             />
-            <h3 class="h-our-team">Mark Guerrero</h3>
+            <h3 class="h-name">Mark Guerrero</h3>
             <p class="p-our-team">Product Designer</p>
           </li>
           class="p-sec-two"
@@ -136,7 +136,7 @@
               width="264"
               height="260"
             />
-            <h3 class="h-our-team">Tom Ford</h3>
+            <h3 class="h-name">Tom Ford</h3>
             <p class="p-our-team">Frontend Developer</p>
           </li>
           <li class="camila-garcia">
@@ -146,7 +146,7 @@
               width="264"
               height="260"
             />
-            <h3 class="h-our-team">Camila Garcia</h3>
+            <h3 class="h-name">Camila Garcia</h3>
             <p class="p-our-team">Marketing</p>
           </li>
           <li class="daniel-wilson">
@@ -156,7 +156,7 @@
               width="264"
               height="260"
             />
-            <h3 class="h-our-team">Daniel Wilson</h3>
+            <h3 class="h-name">Daniel Wilson</h3>
             <p class="p-our-team">UI Designer</p>
           </li>
         </ul>
