--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <section class="sec-our-team">
         <h2 class="h-our-team">Our Team</h2>
         <ul class="list">
-          <li class="marc-guerero">
+          <li class="marc-guerrero">
             <img
               src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
