--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <section class="sec-our-team">
         <h2 class="h-our-team">Our Team</h2>
         <ul class="list">
-          <li class="marc-guerrero">
+          <li class="marc-guerrero list-color">
             <img
               src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
@@ -129,7 +129,7 @@
             <p class="p-our-team">Product Designer</p>
           </li>
           class="p-sec-two"
-          <li class="tom-ford">
+          <li class="tom-ford list-color">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="smiling man 2"
@@ -139,7 +139,7 @@
             <h3 class="h-name">Tom Ford</h3>
             <p class="p-our-team">Frontend Developer</p>
           </li>
-          <li class="camila-garcia">
+          <li class="camila-garcia list-color">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="smiling women"
@@ -149,7 +149,7 @@
             <h3 class="h-name">Camila Garcia</h3>
             <p class="p-our-team">Marketing</p>
           </li>
-          <li class="daniel-wilson">
+          <li class="daniel-wilson list-color">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="smiling man 3"
