--- a/portfolio.html
+++ b/portfolio.html
@@ -43,149 +43,148 @@
           </li>
         </ul>
       </address>
-
     </header>
-          <main>
-
+    <main>
       <section>
-
         <h1 hidden>WebStudio Portfolio</h1>
         <ul class="list">
-          <li>        <button type="button" class="port-button button-color main-font">All</button>
-</li>
-          <li>        <button type="button" class="port-button button-color main-font" >Web Site</button>
-</li>
-          <li>        <button type="button" class="port-button button-color main-font" >App</button>
-</li>
-          <li>        <button type="button" class="port-button button-color main-font" >Design</button>
-</li>
-          <li>        <button type="button" class="port-button button-color main-font" >Marketing</button>
-</li>
+          <li>
+            <button type="button" class="port-button button-color main-font">
+              All
+            </button>
+          </li>
+          <li>
+            <button type="button" class="port-button button-color main-font">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="port-button button-color main-font">
+              App
+            </button>
+          </li>
+          <li>
+            <button type="button" class="port-button button-color main-font">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" class="port-button button-color main-font">
+              Marketing
+            </button>
+          </li>
         </ul>
 
         <ul class="list">
           <li>
             <a class="link" href="">
-            <img 
-              src="./images/portfolio-images/bank-app.jpg"
-              alt="bank app"
-              width="360"
-              height="300"
-            />
-            <h2 class="port-gallery">Banking App Interface Concept</h2>
-            <p class="port-description">App</p>
-                          </a>
-          </li>
-          <li>
-             <a class="link" href="">
-            <img
-              src="./images/portfolio-images/qr-code.jpg"
-              alt="qr code"
-              width="360"
-              height="300"
-            />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+              <img
+                src="./images/portfolio-images/bank-app.jpg"
+                alt="bank app"
+                width="360"
+                height="300"
+              />
+              <h2 class="port-gallery">Banking App Interface Concept</h2>
+              <p class="port-description">App</p>
             </a>
           </li>
           <li>
-             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/meditation-app.jpg"
-              alt="meditation app"
-              width="360"
-              height="300"
-            />
-            <h3>Meditation App</h3>
-            <p>App</p>
-             </a>
-
-          </li>
-        <ul class="list">
-          <li>
-             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/taxi-service.jpg"
-              alt="car steering wheel"
-              width="360"
-              height="300"
-            />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-             </a>
-
-          </li>
-          <li>
-             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/screen-illustrator.jpg"
-              alt="modern smartphone"
-              width="360"
-              height="300"
-            />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-             </a>
-
-          </li>
-          <li>
-             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/online-courses.jpg"
-              alt="smiling girl"
-              width="360"
-              height="300"
-            />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
-             </a>
-
-          </li>
-          <li>
-             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/instagram-feed.jpg"
-              alt="instagram feed"
-              width="360"
-              height="300"
-            />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
-             </a>
-
-          </li>
-          <li>
-             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/fresh-fruits.jpg"
-              alt="fresh fruits"
-              width="360"
-              height="300"
-            />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
-             </a>
-
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/qr-code.jpg"
+                alt="qr code"
+                width="360"
+                height="300"
+              />
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
             <a class="link" href="">
-
-            <img
-              src="./images/portfolio-images/late-art.jpg"
-              alt="late art"
-              width="360"
-              height="300"
-            />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
-             </a>
-
+              <img
+                src="./images/portfolio-images/meditation-app.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+              />
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </a>
+          </li>
+        </ul>
+        <ul class="list">
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/taxi-service.jpg"
+                alt="car steering wheel"
+                width="360"
+                height="300"
+              />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/screen-illustrator.jpg"
+                alt="modern smartphone"
+                width="360"
+                height="300"
+              />
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/online-courses.jpg"
+                alt="smiling girl"
+                width="360"
+                height="300"
+              />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/instagram-feed.jpg"
+                alt="instagram feed"
+                width="360"
+                height="300"
+              />
+              <h3>Instagram Stories Concept</h3>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/fresh-fruits.jpg"
+                alt="fresh fruits"
+                width="360"
+                height="300"
+              />
+              <h3>Organic Food</h3>
+              <p>Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio-images/late-art.jpg"
+                alt="late art"
+                width="360"
+                height="300"
+              />
+              <h3>Fresh Coffee</h3>
+              <p>Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
