--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <h2 class="port-gallery">Cashless Payment</h2>
+              <p class="port-description">Marketing</p>
             </a>
           </li>
           <li>
@@ -108,8 +108,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Meditation App</h3>
-              <p>App</p>
+              <h2 class="port-gallery">Meditation App</h2>
+              <p class="port-description">App</p>
             </a>
           </li>
         </ul>
@@ -122,8 +122,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <h2 class="port-gallery">Taxi Service</h2>
+              <p class="port-description">Marketing</p>
             </a>
           </li>
           <li>
@@ -134,8 +134,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <h2 class="port-gallery">Screen Illustrations</h2>
+              <p class="port-description">Design</p>
             </a>
           </li>
           <li>
@@ -146,8 +146,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
+              <h2 class="port-gallery">Online Courses</h2>
+              <p class="port-description">Marketing</p>
             </a>
           </li>
           <li>
@@ -158,8 +158,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
+              <h2 class="port-gallery">Instagram Stories Concept</h2>
+              <p class="port-description">Design</p>
             </a>
           </li>
           <li>
@@ -170,8 +170,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
+              <h2 class="port-gallery">Organic Food</h2>
+              <p class="port-description">Web Site</p>
             </a>
           </li>
           <li>
@@ -182,8 +182,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
+              <h2 class="port-gallery">Fresh Coffee</h2>
+              <p class="port-description">Web Site</p>
             </a>
           </li>
         </ul>
