--- a/portfolio.html
+++ b/portfolio.html
@@ -49,27 +49,27 @@
         <h1 hidden>WebStudio Portfolio</h1>
         <ul class="list">
           <li>
-            <button type="button" class="port-button button-color main-font">
+            <button type="button" class="port-button">
               All
             </button>
           </li>
           <li>
-            <button type="button" class="port-button button-color main-font">
+            <button type="button" class="port-button">
               Web Site
             </button>
           </li>
           <li>
-            <button type="button" class="port-button button-color main-font">
+            <button type="button" class="port-button">
               App
             </button>
           </li>
           <li>
-            <button type="button" class="port-button button-color main-font">
+            <button type="button" class="port-button">
               Design
             </button>
           </li>
           <li>
-            <button type="button" class="port-button button-color main-font">
+            <button type="button" class="port-button">
               Marketing
             </button>
           </li>
