--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="port-gallery">Banking App Interface Concept</h2>
+              <h3>Banking App Interface Concept</h3>
               <p class="port-description">App</p>
             </a>
           </li>
