--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <a class="menu-link link studio-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link studio-link" href="./portfolio.html"
-              >Portfolio</a
-            >
+            <a class="menu-link link studio-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link studio-link" href="">Contacts</a>
@@ -117,8 +115,8 @@
       </section>
       <section class="sec-our-team">
         <h2 class="h-our-team">Our Team</h2>
-        <ul class="list">
-          <li class="marc-guerrero list-color">
+        <ul class="list our-team-list">
+          <li class="our-team-li list-color">
             <img
               src="./images/our-team/marc-guerrero.jpg"
               alt="smiling man"
@@ -128,8 +126,7 @@
             <h3 class="h-name">Mark Guerrero</h3>
             <p class="p-our-team">Product Designer</p>
           </li>
-          class="p-sec-two"
-          <li class="tom-ford list-color">
+          <li class="our-team-li list-color">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="smiling man 2"
@@ -139,7 +136,7 @@
             <h3 class="h-name">Tom Ford</h3>
             <p class="p-our-team">Frontend Developer</p>
           </li>
-          <li class="camila-garcia list-color">
+          <li class="our-team-li list-color">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="smiling women"
@@ -149,7 +146,7 @@
             <h3 class="h-name">Camila Garcia</h3>
             <p class="p-our-team">Marketing</p>
           </li>
-          <li class="daniel-wilson list-color">
+          <li class="our-team-li list-color">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="smiling man 3"
