--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <address class="adress-item">
+      <address class="address-item">
         <ul class="list">
           <li>
             <a class="email link" href="mailto:info@devstudio.com"
