--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         >
         <ul class="menu-list list">
           <li class="menu-item">
-            <a class="menu-link link studio-link" href="./index.html">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link studio-link" href="./portfolio.html">Portfolio</a>
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link studio-link" href="">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
