--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="main-font">
     <header class="page-header">
-      <nav class="page-nav">
+      <nav>
         <a class="logo link" href="./index.html"
           >Web<span class="logo-design">Studio</span></a
         >
