--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <address class="address-item">
         <ul class="list">
           <li>
-            <a class="email link" href="mailto:info@devstudio.com"
+            <a class="adress-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
