--- a/portfolio.html
+++ b/portfolio.html
@@ -49,29 +49,19 @@
         <h1 hidden>WebStudio Portfolio</h1>
         <ul class="list">
           <li>
-            <button type="button" class="port-button">
-              All
-            </button>
+            <button type="button" class="port-button">All</button>
           </li>
           <li>
-            <button type="button" class="port-button">
-              Web Site
-            </button>
+            <button type="button" class="port-button">Web Site</button>
           </li>
           <li>
-            <button type="button" class="port-button">
-              App
-            </button>
+            <button type="button" class="port-button">App</button>
           </li>
           <li>
-            <button type="button" class="port-button">
-              Design
-            </button>
+            <button type="button" class="port-button">Design</button>
           </li>
           <li>
-            <button type="button" class="port-button">
-              Marketing
-            </button>
+            <button type="button" class="port-button">Marketing</button>
           </li>
         </ul>
 
