--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,14 @@
       <address class="address-item">
         <ul class="list">
           <li>
-            <a class="email link" href="mailto:info@devstudio.com"
+            <a class="adress-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="adress-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
