--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <a class="logo link" href="./index.html"
         >Web<span class="logo-design-footer">Studio</span></a
       >
-      <p>
+      <p class="info-foot">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
