--- a/index.html
+++ b/index.html
@@ -57,46 +57,50 @@
     </header>
     <main>
       <section class="studio-sec-one">
-        <h1 class="hero-item">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
-        <button class="modal-btn ord-ser-btn" type="button">
-          Order Service
-        </button>
+        <div class="container">
+          <h1 class="hero-item">
+            Effective Solutions <br />
+            for Your Business
+          </h1>
+          <button class="modal-btn ord-ser-btn" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
       <section>
-        <h2 hidden>How we are working</h2>
-        <ul class="list section-two">
-          <li>
-            <h3 class="h-sec-two">Strategy</h3>
-            <p class="p-sec-two">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="h-sec-two">Punctuality</h3>
-            <p class="p-sec-two">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="h-sec-two">Diligence</h3>
-            <p class="p-sec-two">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="h-sec-two">Technologies</h3>
-            <p class="p-sec-two">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>How we are working</h2>
+          <ul class="list section-two">
+            <li>
+              <h3 class="h-sec-two">Strategy</h3>
+              <p class="p-sec-two">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="h-sec-two">Punctuality</h3>
+              <p class="p-sec-two">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="h-sec-two">Diligence</h3>
+              <p class="p-sec-two">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="h-sec-two">Technologies</h3>
+              <p class="p-sec-two">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
         <h2 class="our-work sec-pad">What are we doing</h2>
